Fix: vertical / horizontal alignment on screen.

--- a/admin/assets/stylesheets/elements/_modal.scss
+++ b/admin/assets/stylesheets/elements/_modal.scss
@@ -20,6 +20,7 @@ dialog.modal-box {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 0;
 
   &.show {
     display: block;
